--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icon": "^1.0.0",
     "react-scripts": "5.0.1",
     "styled-component": "^2.8.0",
+    "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
